--- a/test/demo.css
+++ b/test/demo.css
@@ -3,6 +3,10 @@
     padding-bottom: 20px;
     background-color: #eee;
 }
+.hairline-demo .hairline:after {
+    border-color: red;
+}
+
 .hairline-demo__box {
     width: 200px;
     height: 100px;
@@ -13,9 +17,6 @@
     line-height: 100px;
     background-color: #fff;
 }
-.hairline-demo__box:after {
-    border-color: red;
-}
 
 .hairline-demo__box--principle {
     position: relative;
@@ -23,8 +24,7 @@
 .hairline-demo__box--principle:after {
     content: '';
     position: absolute;
-    border-width: 1px;
-    border-style: solid;
+    border: 1px solid red;
 }
 .hairline-demo__box--principle-scale-up {
     margin-top: 70px;
@@ -116,9 +116,6 @@
     list-style: none;
     padding-left: 0;
 }
-.hairline-demo__list .hairline:after {
-    border-color: red;
-}
 .hairline-demo__list li {
     padding: 12px 12px 12px 0;
     margin-left: 12px;
@@ -136,12 +133,6 @@
 .hairline-demo__table caption {
     padding: 8px;
     background-color: #fff;
-}
-.hairline-demo__table:after,
-.hairline-demo__table caption:after,
-.hairline-demo__table td:after,
-.hairline-demo__table th:after {
-    border-color: red;
 }
 .hairline-demo__table td,
 .hairline-demo__table th {
